CSS/galeria.css
.galeria {
  display: flex;
  flex-wrap: wrap; /* usamos la propiedad wrap para que las fotos se muevan a una nueva linea, con fines esteticos*/
  justify-content:center;/* centramos las imagenes de la galeria*/
  margin: 0;
  z-index: 1;
}

.galeria .contenedor-imagen {
  flex-basis: 30%; /* como son 9 imagenes ocupando el 30% del flex quedan 3 imagenes por linea en ventana de computadora*/
  padding: 10px;
  position: relative;
  overflow: hidden; /* sin esto las imagenes se desbordan y chocan entre si*/ 
  height: 430px;
}

.galeria .contenedor-imagen:hover .texto-imagen {
  opacity: 1;
}

.galeria .contenedor-imagen:hover img {
  cursor: crosshair;
  width: 115%;
  opacity: 1;
  filter: contrast(120%);
}

.galeria .contenedor-imagen img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 1;
  transition: 0.5s ease;
  position: relative;
} 

.galeria .texto-imagen {
  position: absolute;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  color: #fff;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  opacity: 0;
  padding: 20px;
  box-sizing: border-box;
  transition: opacity 0.5s ease;
}

.galeria .texto-imagen h3 {
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  font-size: 24px;
  font-weight: 600;
  text-align: center;
}

.galeria .texto-imagen p {
  margin: 0;
  font-size: 16px;
  font-weight: 300;
  text-align: center;
  margin-top: 10px;
}


@media screen and (max-width: 600px) {
  .galeria .contenedor-imagen {
    flex-basis: 100%;
  }
}

